--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 crossterm = "0.27.0"
 ratatui = "0.26.2"
 regex = "1.10.4"
+serde = { version = "1.0.202", features = ["derive"] }
+serde_json = "1.0.117"
